# autoutils

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
autoutils/: api.py  color.py  file.py  log.py  redis.py  script.py  server.py  thread.py
autoutils/matrixcli/: client.py  room.py
docs/source/: conf.py  index.rst
matrixcli/: api.py  errors.py  user.py
